fix widget items spacing

--- a/src/widget/styles.css
+++ b/src/widget/styles.css
@@ -121,7 +121,7 @@ svg {
 }
 
 .csl-widget-items {
-  padding: 0 calc(var(--spacing) * 2) var(--spacing);
+  padding-inline: calc(var(--spacing) * 2);
   display: flex;
   flex-direction: column;
 }
@@ -175,15 +175,16 @@ svg {
 .csl-widget-divider {
   height: 1px;
   background-color: var(--border);
-  margin: calc(var(--spacing) * 3) calc(var(--spacing) * 4);
-  margin-top: 0;
+  margin-inline: calc(var(--spacing) * 4);
+  margin-bottom: calc(var(--spacing) * 3);
 }
 
 .csl-widget-footer {
-  padding: 0 calc(var(--spacing) * 4) calc(var(--spacing) * 3);
+  padding: calc(var(--spacing) * 4);
+  padding-top: 0;
   display: flex;
   flex-direction: column;
-  gap: var(--spacing);
+  gap: calc(var(--spacing) * 2);
 }
 
 .csl-widget-explore {
